--- a/.gitlab-ci-madsbuvi.yml
+++ b/.gitlab-ci-madsbuvi.yml
@@ -1,7 +1,11 @@
+default:
+  interruptible: true
+
 # Note: We set `needs` on each job to control the job DAG.
 # See https://docs.gitlab.com/ee/ci/yaml/#needs
 stages:
   - build
+  - test
 
 # https://blog.nimbleways.com/let-s-make-faster-gitlab-ci-cd-pipelines/
 variables:
@@ -58,6 +62,50 @@ variables:
     paths:
       - build/install/
 
+Coverity:
+  tags:
+    - docker
+    - linux
+  image: ubuntu:20.04
+  stage: build
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+  cache:
+    key: Coverity.ubuntu_20.04.v1
+    paths:
+    - apt-cache/
+    - ccache/
+  variables:
+    CCACHE_SIZE: 2G
+    CC: clang
+    CXX: clang++
+    CMAKE_BUILD_TYPE: Debug
+    CMAKE_CXX_FLAGS_DEBUG: -O0
+  before_script:
+    - CI/install_debian_deps.sh clang_ubuntu_20_04 openmw-deps openmw-deps-dynamic
+    - curl -o /tmp/cov-analysis-linux64.tgz https://scan.coverity.com/download/linux64
+      --form project=$COVERITY_SCAN_PROJECT_NAME --form token=$COVERITY_SCAN_TOKEN
+    - tar xfz /tmp/cov-analysis-linux64.tgz
+  script:
+    - export CCACHE_BASEDIR="$(pwd)"
+    - export CCACHE_DIR="$(pwd)/ccache"
+    - mkdir -pv "${CCACHE_DIR}"
+    - ccache -z -M "${CCACHE_SIZE}"
+    - CI/before_script.linux.sh
+    - cov-analysis-linux64-*/bin/cov-configure --template --comptype prefix --compiler ccache
+    # Remove the specific targets and build everything once we can do it under 3h
+    - cov-analysis-linux64-*/bin/cov-build --dir cov-int cmake --build build -- -j $(nproc)
+    - ccache -s
+  after_script:
+    - tar cfz cov-int.tar.gz cov-int
+    - curl https://scan.coverity.com/builds?project=$COVERITY_SCAN_PROJECT_NAME
+      --form token=$COVERITY_SCAN_TOKEN --form email=$GITLAB_USER_EMAIL
+      --form file=@cov-int.tar.gz --form version="$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA"
+      --form description="CI_COMMIT_SHORT_SHA / $CI_COMMIT_TITLE / $CI_COMMIT_REF_NAME:$CI_PIPELINE_ID"
+  artifacts:
+    paths:
+      - /builds/OpenMW/openmw/cov-int/build-log.txt
+
 Ubuntu_GCC:
   extends: .Ubuntu
   cache:
@@ -67,7 +115,7 @@ Ubuntu_GCC:
   variables:
     CC: gcc
     CXX: g++
-    CCACHE_SIZE: 3G
+    CCACHE_SIZE: 4G
   # When CCache doesn't exist (e.g. first build on a fork), build takes more than 1h, which is the default for forks.
   timeout: 2h
 
@@ -100,6 +148,22 @@ Ubuntu_GCC_tests:
     reports:
       junit: build/tests.xml
 
+.Ubuntu_GCC_tests_Debug:
+  extends: Ubuntu_GCC
+  cache:
+    key: Ubuntu_GCC_tests_Debug.ubuntu_22.04.v1
+  variables:
+    CCACHE_SIZE: 1G
+    BUILD_TESTS_ONLY: 1
+    CMAKE_BUILD_TYPE: Debug
+    CMAKE_CXX_FLAGS_DEBUG: -g -O0 -D_GLIBCXX_ASSERTIONS
+  artifacts:
+    paths: []
+    name: ${CI_JOB_NAME}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}
+    when: always
+    reports:
+      junit: build/tests.xml
+
 Ubuntu_GCC_tests_asan:
   extends: Ubuntu_GCC
   cache:
@@ -111,6 +175,23 @@ Ubuntu_GCC_tests_asan:
     CMAKE_CXX_FLAGS_DEBUG: -g -O1 -fno-omit-frame-pointer -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak
     CMAKE_EXE_LINKER_FLAGS: -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak -fuse-ld=mold
     ASAN_OPTIONS: halt_on_error=1:strict_string_checks=1:detect_stack_use_after_return=1:check_initialization_order=1:strict_init_order=1
+  artifacts:
+    paths: []
+    name: ${CI_JOB_NAME}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}
+    when: always
+    reports:
+      junit: build/tests.xml
+
+Ubuntu_GCC_tests_ubsan:
+  extends: Ubuntu_GCC
+  cache:
+    key: Ubuntu_GCC_ubsan.ubuntu_22.04.v1
+  variables:
+    CCACHE_SIZE: 1G
+    BUILD_TESTS_ONLY: 1
+    CMAKE_BUILD_TYPE: Debug
+    CMAKE_CXX_FLAGS_DEBUG: -g -O0 -fsanitize=undefined
+    UBSAN_OPTIONS: print_stacktrace=1:halt_on_error=1
   artifacts:
     paths: []
     name: ${CI_JOB_NAME}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}
@@ -134,6 +215,25 @@ Ubuntu_GCC_tests_asan:
     name: ${CI_JOB_NAME}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}
     when: always
     reports:
+      junit: build/tests.xml
+
+Ubuntu_GCC_tests_coverage:
+  extends: .Ubuntu_GCC_tests_Debug
+  cache:
+    key: Ubuntu_GCC_tests_coverage.ubuntu_22.04.v1
+  variables:
+    BUILD_WITH_CODE_COVERAGE: 1
+  before_script:
+    - CI/install_debian_deps.sh gcc openmw-deps openmw-deps-dynamic openmw-coverage
+  coverage: /^\s*lines:\s*\d+.\d+\%/
+  artifacts:
+    paths: []
+    name: ${CI_JOB_NAME}-${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHA}
+    when: always
+    reports:
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage.xml
       junit: build/tests.xml
 
 .Ubuntu_Static_Deps:
@@ -232,23 +332,64 @@ Ubuntu_Clang_tests_Debug:
     reports:
       junit: build/tests.xml
 
-variables: &engine-targets
-  targets: "openmw_vr,openmw-launcher"
-  package: "Engine"
+Ubuntu_Clang_integration_tests:
+  extends: .Ubuntu_Image
+  stage: test
+  needs:
+    - Ubuntu_Clang
+  variables:
+    PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+  cache:
+    key: Ubuntu_Clang_integration_tests.ubuntu_22.04.v1
+    paths:
+      - .cache/pip
+      - apt-cache/
+  before_script:
+    - CI/install_debian_deps.sh openmw-integration-tests
+    - pip3 install --user numpy matplotlib termtables click
+  script:
+    - CI/run_integration_tests.sh
 
-variables: &cs-targets
-  targets: "openmw-cs,bsatool,esmtool,niftest,openmw-essimporter"
-  package: "CS"
+.MacOS:
+  image: macos-11-xcode-12
+  tags:
+    - shared-macos-amd64
+  stage: build
+  only:
+    variables:
+      - $CI_PROJECT_ID == "7107382"
+  cache:
+    paths:
+    - ccache/
+  script:
+    - rm -fr build  # remove the build directory
+    - CI/before_install.osx.sh
+    - export CCACHE_BASEDIR="$(pwd)"
+    - export CCACHE_DIR="$(pwd)/ccache"
+    - mkdir -pv "${CCACHE_DIR}"
+    - ccache -z -M "${CCACHE_SIZE}"
+    - CI/before_script.osx.sh
+    - cd build; make -j $(sysctl -n hw.logicalcpu) package
+    - for dmg in *.dmg; do mv "$dmg" "${dmg%.dmg}_${CI_COMMIT_REF_NAME##*/}_${CI_JOB_ID}.dmg"; done
+    - ccache -s
+  artifacts:
+    paths:
+      - build/OpenMW-*.dmg
+      - "build/**/*.log"
 
-variables: &tests-targets
-  targets: "openmw_test_suite,openmw_detournavigator_navmeshtilescache_benchmark"
-  package: "Tests"
+macOS12_Xcode13:
+  extends: .MacOS
+  image: macos-12-xcode-13
+  cache:
+    key: macOS12_Xcode13.v1
+  variables:
+    CCACHE_SIZE: 3G
 
 .Windows_Ninja_Base:
   tags:
     - windows
   rules:
-    - if: $CI_PIPELINE_SOURCE == "push"    
+    - if: $CI_PIPELINE_SOURCE == "push"
   before_script:
   - Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1"
   - choco source add -n=openmw-proxy -s="https://repo.openmw.org/repository/Chocolatey/" --priority=1
@@ -281,25 +422,25 @@ variables: &tests-targets
     - $env:CCACHE_BASEDIR = Get-Location
     - $env:CCACHE_DIR = "$(Get-Location)\ccache"
     - New-Item -Type Directory -Force -Path $env:CCACHE_DIR
-    - sh CI/before_script.msvc.sh -c $config -p Win64 -v 2019 -k -V -N -b -t  -C -M -E
-    - ccache --show-stats
+    - sh CI/before_script.msvc.sh -c $config -p Win64 -v 2019 -k -V -N -b -t -C $multiview -E
     - cd MSVC2019_64_Ninja
     - .\ActivateMSVC.ps1
-    - cmake --build . --config $config --target ($targets.Split(','))
+    - cmake --build . --config $config
+    - ccache --show-stats
     - cd $config
     - echo "CI_COMMIT_REF_NAME ${CI_COMMIT_REF_NAME}`nCI_JOB_ID ${CI_JOB_ID}`nCI_COMMIT_SHA ${CI_COMMIT_SHA}" | Out-File -Encoding UTF8 CI-ID.txt
     - Get-ChildItem -Recurse *.ilk | Remove-Item
     - |
       if (Get-ChildItem -Recurse *.pdb) {
-        7z a -tzip "..\..\$(Make-SafeFileName("OpenMW_MSVC2019_64_${package}_${config}_${CI_COMMIT_REF_NAME}_${CI_JOB_ID}_symbols.zip"))" '*.pdb' CI-ID.txt
+        7z a -tzip "..\..\$(Make-SafeFileName("OpenMW_MSVC2019_64_${config}_${CI_COMMIT_REF_NAME}_${CI_JOB_ID}_symbols.zip"))" '*.pdb' CI-ID.txt
         Get-ChildItem -Recurse *.pdb | Remove-Item
       }
-    - 7z a -tzip "..\..\$(Make-SafeFileName("OpenMW_MSVC2019_64_${package}_${config}_${CI_COMMIT_REF_NAME}.zip"))" '*'
+    - 7z a -tzip "..\..\$(Make-SafeFileName("OpenMW_MSVC2019_64_${config}_${CI_COMMIT_REF_NAME}.zip"))" '*'
     - if ($executables) { foreach ($exe in $executables.Split(',')) { & .\$exe } }
   after_script:
     - Copy-Item C:\ProgramData\chocolatey\logs\chocolatey.log
   cache:
-    key: ninja-v2
+    key: ninja-v4
     paths:
     - ccache
     - deps
@@ -320,44 +461,34 @@ variables: &tests-targets
   # When CCache doesn't exist (e.g. first build on a fork), build takes more than 1h, which is the default for forks.
   timeout: 2h
 
-Windows_Ninja_Engine_Release:
+.Windows_Ninja_Release:
   extends:
     - .Windows_Ninja_Base
   variables:
-    <<: *engine-targets
+    multiview: "-M"
     config: "Release"
 
-Windows_Ninja_Engine_Debug:
+.Windows_Ninja_Debug:
   extends:
     - .Windows_Ninja_Base
   variables:
-    <<: *engine-targets
+    multiview: "-M"
     config: "Debug"
 
-Windows_Ninja_Engine_RelWithDebInfo:
+.Windows_Ninja_RelWithDebInfo:
   extends:
     - .Windows_Ninja_Base
   variables:
-    <<: *engine-targets
-    config: "RelWithDebInfo"
-
-Windows_Ninja_Tests_RelWithDebInfo:
-  extends: .Windows_Ninja_Base
-  stage: build
-  variables:
-    <<: *tests-targets
+    multiview: "-M"
     config: "RelWithDebInfo"
     # Gitlab can't successfully execute following binaries due to unknown reason
     # executables: "openmw_test_suite.exe,openmw_detournavigator_navmeshtilescache_benchmark.exe"
-  artifacts:
-    paths: []
-    expire_in: 1 minute
 
 .Windows_MSBuild_Base:
   tags:
     - windows
   rules:
-    - if: $CI_PIPELINE_SOURCE == "push"    
+    - if: $CI_PIPELINE_SOURCE == "push"
   before_script:
   - Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1"
   - choco source add -n=openmw-proxy -s="https://repo.openmw.org/repository/Chocolatey/" --priority=1
@@ -389,24 +520,24 @@ Windows_Ninja_Tests_RelWithDebInfo:
     - $env:CCACHE_BASEDIR = Get-Location
     - $env:CCACHE_DIR = "$(Get-Location)\ccache"
     - New-Item -Type Directory -Force -Path $env:CCACHE_DIR
-    - sh CI/before_script.msvc.sh -c $config -p Win64 -v 2019 -k -V -b -t
+    - sh CI/before_script.msvc.sh -c $config -p Win64 -v 2019 -k -V -b -t -C $multiview -E
     - cd MSVC2019_64
-    - cmake --build . --config $config --target ($targets.Split(','))
+    - cmake --build . --config $config
     - ccache --show-stats
     - cd $config
     - echo "CI_COMMIT_REF_NAME ${CI_COMMIT_REF_NAME}`nCI_JOB_ID ${CI_JOB_ID}`nCI_COMMIT_SHA ${CI_COMMIT_SHA}" | Out-File -Encoding UTF8 CI-ID.txt
     - Get-ChildItem -Recurse *.ilk | Remove-Item
     - |
       if (Get-ChildItem -Recurse *.pdb) {
-        7z a -tzip "..\..\$(Make-SafeFileName("OpenMW_MSVC2019_64_${package}_${config}_${CI_COMMIT_REF_NAME}_${CI_JOB_ID}_symbols.zip"))" '*.pdb' CI-ID.txt
+        7z a -tzip "..\..\$(Make-SafeFileName("OpenMW_MSVC2019_64_${config}_${CI_COMMIT_REF_NAME}_${CI_JOB_ID}_symbols.zip"))" '*.pdb' CI-ID.txt
         Get-ChildItem -Recurse *.pdb | Remove-Item
       }
-    - 7z a -tzip "..\..\$(Make-SafeFileName("OpenMW_MSVC2019_64_${package}_${config}_${CI_COMMIT_REF_NAME}.zip"))" '*'
+    - 7z a -tzip "..\..\$(Make-SafeFileName("OpenMW_MSVC2019_64_${config}_${CI_COMMIT_REF_NAME}.zip"))" '*'
     - if ($executables) { foreach ($exe in $executables.Split(',')) { & .\$exe } }
   after_script:
     - Copy-Item C:\ProgramData\chocolatey\logs\chocolatey.log
   cache:
-    key: msbuild-v2
+    key: msbuild-v4
     paths:
     - ccache
     - deps
@@ -427,44 +558,82 @@ Windows_Ninja_Tests_RelWithDebInfo:
   # When CCache doesn't exist (e.g. first build on a fork), build takes more than 1h, which is the default for forks.
   timeout: 2h
 
-Windows_MSBuild_Engine_Release:
+.Windows_MSBuild_Release:
   extends:
     - .Windows_MSBuild_Base
   variables:
-    <<: *engine-targets
+    multiview: "-M"
     config: "Release"
   rules:
     # run this for both pushes and schedules so 'latest successful pipeline for branch' always includes it
     - if: $CI_PIPELINE_SOURCE == "push"
-    - if: $CI_PIPELINE_SOURCE == "schedule" 
+    - if: $CI_PIPELINE_SOURCE == "schedule"
 
-Windows_MSBuild_Engine_Debug:
+.Windows_MSBuild_Debug:
   extends:
     - .Windows_MSBuild_Base
   variables:
-    <<: *engine-targets
+    multiview: "-M"
     config: "Debug"
 
-Windows_MSBuild_Engine_RelWithDebInfo:
+Windows_MSBuild_RelWithDebInfo:
   extends:
     - .Windows_MSBuild_Base
   variables:
-    <<: *engine-targets
-    config: "RelWithDebInfo"
-
-Windows_MSBuild_Tests_RelWithDebInfo:
-  extends: .Windows_MSBuild_Base
-  stage: build
-  variables:
-    <<: *tests-targets
     config: "RelWithDebInfo"
     # Gitlab can't successfully execute following binaries due to unknown reason
     # executables: "openmw_test_suite.exe,openmw_detournavigator_navmeshtilescache_benchmark.exe"
-  artifacts:
-    paths: []
-    expire_in: 1 minute
+  # temporarily enabled while we're linking these on the downloads page
+  rules:
+    # run this for both pushes and schedules so 'latest successful pipeline for branch' always includes it
+    - if: $CI_PIPELINE_SOURCE == "push"
+    - if: $CI_PIPELINE_SOURCE == "schedule"
 
-FindMissingMergeRequests:
+
+Ubuntu_AndroidNDK_arm64-v8a:
+  tags:
+    - linux
+  image: psi29a/android-ndk:focal-ndk22
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "push"
+  variables:
+    CCACHE_SIZE: 3G
+  cache:
+    key: Ubuntu__Focal_AndroidNDK_r22b_arm64-v8a.v2
+    paths:
+      - apt-cache/
+      - ccache/
+      - build/extern/fetched/
+  before_script:
+    - CI/install_debian_deps.sh android
+  stage: build
+  script:
+    - df -h
+    - export CCACHE_BASEDIR="`pwd`"
+    - export CCACHE_DIR="`pwd`/ccache" && mkdir -pv "$CCACHE_DIR"
+    - ccache -z -M "${CCACHE_SIZE}"
+    - CI/before_install.android.sh
+    - CI/before_script.android.sh
+    - cd build
+    - cmake --build . -- -j $(nproc)
+    # - cmake --install .  # no one uses builds anyway, disable until 'no space left' is resolved
+    - ccache -s
+    - df -h
+    - ls | grep -v -e '^extern$' -e '^install$' | xargs -I '{}' rm -rf './{}'
+    - cd ..
+    - df -h
+    - du -sh build/
+    # - du -sh build/install/ # no install dir because it's commented out above
+    - du -sh apt-cache/
+    - du -sh ccache/
+    - du -sh build/extern/fetched/
+  artifacts:
+    paths:
+      - build/install/
+  # When CCache doesn't exist (e.g. first build on a fork), build takes more than 1h, which is the default for forks.
+  timeout: 1h30m
+
+.FindMissingMergeRequests:
   image: python:latest
   stage: build
   rules:
@@ -479,3 +648,23 @@ FindMissingMergeRequests:
     - pip3 install --user requests click discord_webhook
   script:
     - scripts/find_missing_merge_requests.py --project_id=$CI_PROJECT_ID --ignored_mrs_path=$CI_PROJECT_DIR/.resubmitted_merge_requests.txt
+
+.flatpak:
+    image: 'docker.io/bilelmoussaoui/flatpak-github-actions'
+    stage: build
+    script:
+      - flatpak install -y flathub org.kde.Platform/x86_64/5.15-21.08
+      - flatpak install -y flathub org.kde.Sdk/x86_64/5.15-21.08
+      - flatpak-builder --ccache --force-clean --repo=repo build CI/org.openmw.OpenMW.devel.yaml
+      - flatpak build-bundle ./repo openmw.flatpak org.openmw.OpenMW.devel
+    cache:
+      key: flatpak
+      paths: 
+        - ".flatpak-builder"
+    artifacts:
+      untracked: false
+      paths:
+        - "openmw.flatpak"
+    # When CCache doesn't exist (e.g. first build on a fork), build takes more than 1h, which is the default for forks.
+    # Flatpak Builds compile all dependencies aswell so need more time. Build results of libraries are cached
+    timeout: 4h
