enable release rule

--- a/.gitlab-ci-madsbuvi.yml
+++ b/.gitlab-ci-madsbuvi.yml
@@ -560,7 +560,7 @@ macOS12_Xcode13:
   # When CCache doesn't exist (e.g. first build on a fork), build takes more than 1h, which is the default for forks.
   timeout: 2h
 
-.Windows_MSBuild_Release:
+Windows_MSBuild_Release:
   extends:
     - .Windows_MSBuild_Base
   variables:
