prototyping height calibration

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1220,7 +1220,7 @@ transparent postpass = true
 
 [VR]
 # Should match your real height in the format meters.centimeters. This is used to scale your position within the vr stage to better match your character.
-real height = 1.85
+player height = 1.85
 
 # If enabled, the game window will show your VR view. If not, it will show nothing.
 mirror texture = true
@@ -1267,6 +1267,9 @@ smooth turn rate = 0.66
 
 # If enabled, the VR pointer will use any left handed modes available
 left handed mode = false
+
+# If not true, the game should calibrate the player's height before continuing to the main menu
+player height calibrated = false
 
 [VR Debug]
 # If true, OpenMW-VR will enable gamma postprocessing
