Option to disable thumbstick auto running. Default bind left thumbstick click.

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -544,6 +544,9 @@ gyro horizontal sensitivity = 1.0
 # Vertical camera axis sensitivity to gyroscope movement.
 gyro vertical sensitivity = 1.0
 
+# If false, player must also toggle run to run with a thumbstick.
+thumbstick auto run = true
+
 [Saves]
 
 # Name of last character played, and default for loading save files.
