--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -371,6 +371,7 @@ if(BUILD_OPENMW_VR)
         trackingmanager
         trackingpath
         trackingsource
+        trackingtransform
         viewer
         vr
     )
