Configurable HUD positions

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1252,9 +1252,34 @@ haptics enabled = true
 # If enabled, movement direction is taken from the left hand tracker, instead of the head tracker.
 hand directed movement = false
 
-# Position of the hud over the left hand
-# Valid options are: top, wrist
-left hand hud position = wrist
+# Tracked position of the hud.
+# Valid values are:
+# left wrist
+# right wrist 
+# top left
+# top right
+# bottom left
+# bottom right
+hud position = left wrist
+
+# Tracked position of the tooltip
+# Valid values are:
+# beam
+# left wrist
+# right wrist
+# top left
+# top right
+# bottom left
+# bottom right
+tooltip position = right wrist
+
+# Defines an offset, in meters, from tracked position selected above
+hud offset x = 0.5
+hud offset y = 0.5
+hud offset z = 0.5
+tooltip offset x = 0.5
+tooltip offset y = 0.5
+tooltip offset z = 0.5
 
 # If true, OpenMW-VR will enable seated play.
 seated play = false
