configurable hands offset

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1273,13 +1273,16 @@ hud position = left wrist
 # bottom right
 tooltip position = right wrist
 
-# Defines an offset, in meters, from tracked position selected above
+# Defines an offset from the tracked position where 0 = -1 meters, and 1 = 1 meters
 hud offset x = 0.5
 hud offset y = 0.5
 hud offset z = 0.5
 tooltip offset x = 0.5
 tooltip offset y = 0.5
 tooltip offset z = 0.5
+hands offset x = 0.5
+hands offset y = 0.5
+hands offset z = 0.5
 
 # If true, OpenMW-VR will enable seated play.
 seated play = false
