New bindings setup for axis up/down. Default up action radial menu, default down action toggle sneak. Radial menu also default bound to B as a long press.

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1302,6 +1302,13 @@ left handed mode = false
 # If not true, the game should calibrate the player's height before continuing to the main menu
 player height calibrated = false
 
+# Defines what actions should fire when pulling the utility thumbstick or forcepad up and down.
+# The utility stick is the stick you use to look left and right, by default the right hand stick.
+# While any gameplay input action listed in xrcontrollersuggestions.xml can be used, I would suggest
+# two of toggle_sneak, radial_menu, rest, quick_save, journal_book, or jump
+utility axis up action = radial_menu
+utility axis down action = toggle_sneak
+
 [VR Debug]
 # If true, OpenMW-VR will enable gamma postprocessing
 gamma postprocessing = true
