Rewrote height calibration dialogue to not require the user to press the menu key (thanks, steamvr). Default right thumbstick UP action is not game menu, for the benefit of steamvr users.

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1219,8 +1219,8 @@ auto exposure speed = 0.9
 transparent postpass = true
 
 [VR]
-# Should match your real height in the format meters.centimeters. This is used to scale your position within the vr stage to better match your character.
-player height = 1.85
+# Should match your real height in meters. This is used to scale your position within the vr stage to better match your character.
+player height = 1.8
 
 # If enabled, the game window will show your VR view. If not, it will show nothing.
 mirror texture = true
@@ -1296,14 +1296,14 @@ smooth turn rate = 0.66
 # If enabled, the VR pointer will use any left handed modes available
 left handed mode = false
 
-# If not true, the game should calibrate the player's height before continuing to the main menu
-player height calibrated = false
+# If not true, play an intro sequence explaining some of OpenMW-VR's controls, and performing the height calibration.
+intro sequence complete = false
 
 # Defines what actions should fire when pulling the utility thumbstick or forcepad up and down.
 # The utility stick is the stick you use to look left and right, by default the right hand stick.
 # While any gameplay input action listed in xrcontrollersuggestions.xml can be used, I would suggest
-# two of toggle_sneak, radial_menu, rest, quick_save, journal_book, or jump
-utility axis up action = radial_menu
+# two of toggle_sneak, radial_menu, rest, quick_save, journal_book, jump, or game_menu
+utility axis up action = game_menu
 utility axis down action = toggle_sneak
 
 [VR Debug]
