Fixed some settings being blank in the settings menu while at default values.

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1251,24 +1251,28 @@ hand directed movement = false
 
 # Tracked position of the hud.
 # Valid values are:
-# left wrist
-# right wrist 
+# left wrist inner
+# right wrist inner
+# left wrist top
+# right wrist top
 # top left
 # top right
 # bottom left
 # bottom right
-hud position = left wrist
+hud position = left wrist inner
 
 # Tracked position of the tooltip
 # Valid values are:
-# beam
-# left wrist
-# right wrist
+# beam # Not implemented!
+# left wrist inner
+# right wrist inner
+# left wrist top
+# right wrist top
 # top left
 # top right
 # bottom left
 # bottom right
-tooltip position = right wrist
+tooltip position = right wrist inner
 
 # Defines an offset from the tracked position where 0 = -1 meters, and 1 = 1 meters
 hud offset x = 0.5
