Openmw vr physicalsneak

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1310,6 +1310,12 @@ intro sequence complete = false
 utility axis up action = game_menu
 utility axis down action = toggle_sneak
 
+# If true, enable physical sneak 
+physical sneak enabled = true
+
+# Offset from calibrated height to start physical sneaking
+physical sneak height offset = 0.25
+
 [VR Debug]
 # If true, OpenMW-VR will enable gamma postprocessing
 gamma postprocessing = true
