Refactor GUI code. Add strong typing of tracking units.

--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -364,6 +364,7 @@ if(BUILD_OPENMW_VR)
         directx
         frame
         layer
+        rendertoswapchain
         session
         space
         swapchain
