--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1316,6 +1316,9 @@ physical sneak enabled = true
 # Offset from calibrated height to start physical sneaking
 physical sneak height offset = 0.25
 
+# Experimental
+use xr layer for huds = false
+
 [VR Debug]
 # If true, OpenMW-VR will enable gamma postprocessing
 gamma postprocessing = true
