Settings for crosshairs

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1316,6 +1316,9 @@ physical sneak enabled = true
 # Offset from calibrated height to start physical sneaking
 physical sneak height offset = 0.25
 
+# Enables/disables 3D crosshairs
+show 3D crosshairs = true
+
 # Experimental
 use xr layer for huds = false
 
