Workaround for the skywind blaster ammo not launching with an appropriate orientation

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1378,3 +1378,5 @@ submit stencil formats = false
 # SteamVR has a bug where the unsupported R10G10B10 texture formats are reported as being supported.
 # Ref: https://steamcommunity.com/app/250820/discussions/8/3102390454960504573/
 disable texture format = steamvr:0x8059 steamvr:0x906F steamvr:0x8052
+
+skywind blaster workaround = true
