Stop sharing depth info by default. I find too many vendor bugs either related to this feature or depth+stencil buffers or both.

--- a/files/settings-default.cfg
+++ b/files/settings-default.cfg
@@ -1347,7 +1347,7 @@ continue on errors = true
 # If true, do not use the OpenXR extension
 disable XR_KHR_opengl_enable = false
 disable XR_KHR_D3D11_enable = false
-disable XR_KHR_composition_layer_depth = false
+disable XR_KHR_composition_layer_depth = true
 disable XR_EXT_debug_utils = true
 disable XR_EXT_hp_mixed_reality_controller = false
 disable XR_HTC_vive_cosmos_controller_interaction = false
